# Automake Settings
# Copyright (C) 2019-2020 kaoru  https://www.tetengo.org/

EXTRA_DIST = \
    call_clang-format.sh \
    check_file_name_lengths.py \
    install_tetengo_library.bat \
    list_sources.py \
    make_character_property_map.py \
    make_character_property_map_cpp.bat \
    make_character_property_map_cpp.py \
    make_character_property_map_cpp.sh
